# marketplace

./: README.md
.github/: CODEOWNERS
mcp/weather-mcp/: Dockerfile  LICENSE  README.md  pyproject.toml
mcp/weather-mcp/src/thclaws_weather/: __init__.py  __main__.py  server.py
mcp/weather-mcp/tests/: test_server.py
plugins/productivity/: NOTICE.md  README.md
plugins/productivity/.claude-plugin/: plugin.json
plugins/productivity/scripts/: regen_dashboard.py
plugins/productivity/skills/: dashboard.html
plugins/productivity/skills/memory-management/: SKILL.md
plugins/productivity/skills/start/: SKILL.md
plugins/productivity/skills/task-management/: SKILL.md
plugins/productivity/skills/update/: SKILL.md
skills/frontend-design/: NOTICE.md  SKILL.md
skills/skill-creator/: NOTICE.md  SKILL.md
skills/skill-creator/eval-viewer/: viewer.html
skills/skill-creator/scripts/: run_eval.py
